--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
     <main class="main-container">
       <div class="main-image">
         <img
-        src="images/image-equilibrium.jpg"
-        alt="Equilibrium"
-        class="equilibrium"
-      />
+          src="images/image-equilibrium.jpg"
+          alt="Equilibrium"
+          class="equilibrium"
+        />
+        <div class="image-view">
+          <img src="images/icon-view.svg" alt="">
+        </div>
       </div>
-
-      
 
       <h1>Equilibrium #3429</h1>
 
